[tool.poetry]
name = "storybook"
version = "0.1.0"
description = ""
authors = ["pathikrit <pathikritbhowmick@msn.com>"]
readme = "README.md"
packages = [{include = "storybook", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.12"
streamlit = ">=1.44.0,<2.0.0"
pydantic = ">=2.10.6,<3.0.0"
openai = ">=1.69.0,<2.0.0"
dotenv = ">=0.9.9,<0.10.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
